<resources>
    <string title="hello_world">Hello world!</string>
    <string title="hello_blank_fragment">Hello blank fragment</string>

    <string title="app_name">Book</string>

    <!--menu-->
    <string title="online_books">Online books</string>
    <string title="action_import">Import books</string>
    <string title="action_add">add</string>
    <string title="action_delete">delete</string>
    <string title="action_select_all">select add</string>
    <string title="action_deselect_all">deselect all</string>

    <!-- shelfActivity -->
    <string title="toolbar_shelf">Shelf</string>
    <string title="drawer_open">open drawer</string>
    <string title="drawer_close">close drawer</string>
    <string title="delete_failure">delete non-existent books failed</string>
    <string title="delete_message">remove from shelf</string>
    <string title="delete_file">delete file concurrently</string>
    <string title="sd_import">import from SD</string>
    <string title="bt_import">import from bluetooth</string>

    <!-- SDImportActivity -->
    <string title="toolbar_import">ImportBook</string>
    <string title="hint_need_checked">please choose at least one file</string>
    <string title="hint_add_book_success">added book number is:%1$d</string>
    <string title="already_in_shelf">already in shelf</string>

    <!-- OnlineActivity -->
    <string name="online">Online</string>
    <string name="promote">Promote</string>
    <string name="classify">Classify</string>

    <!-- SectionActivity -->
    <string name="toolbar_section">Section</string>
    <string name="top_image">Image</string>

    <!--LogonActivity-->
    <string name="input_username">Username</string>
    <string name="input_pwd">Your password</string>
    <string name="logon">Logon</string>
    <string name="third_party_logon">Third party logon</string>
    <string name="register_hint">Go to register page</string>
    <string name="register">Register</string>
    <string name="register_loss">Please type in all register messages.</string>
    <string name="logon_loss">Please type in all logon messages.</string>
    <string name="register_success">Register success!</string>
    <string name="username_repeat">This username has been registered.</string>
    <string name="confirm">Confirm</string>
    <string name="username_pwd_mismatch">Wrong password.</string>
    <string name="user_not_found">User not found.</string>

    <!--general-->
    <string name="error">There is a little error in our app~</string>
    <string name="network_connect_error">Net connect failed~</string>

</resources>
