<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_layout"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pwd_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:shadowColor="?attr/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/logon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd_layout">

        <Button
            android:id="@+id/logon_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/common_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/logon"
            android:textColor="#ffffff"/>

        <ProgressBar
            android:id="@+id/my_progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/large_margin"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logon_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/common_margin"
        android:text="@string/register_hint"
        android:textColor="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/show_third_party"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/third_party_logon"/>

    <ViewStub
        android:id="@+id/view_stub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout="@layout/layout_third_party"/>

</RelativeLayout>